--- a/blogs/SiliconValley/2020/111001.md
+++ b/blogs/SiliconValley/2020/111001.md
@@ -1,19 +1,20 @@
 ---
 title: 模块化的发展
 date: 2020-11-10
+sidebar: auto
 tags:
   - Webpack
 categories:
-  - SiliconValley
-summary: Webpack如何从打包工具发展到构建前端项目的“构建系统”。
-location: Hangzhou
+  - Silicon Valley
 ---
+
+这不就是最原始的 Web 引入 JavaScript 代码吗，只不过是以不同文件保存不同的功能代码和相关状态数据，这也能叫模块化。
+
+<!-- more -->
 
 # 早期的模块化
 
 ## Stage1 文件划分方式
-
-这不就是最原始的 Web 引入 JavaScript 代码吗，只不过是以不同文件保存不同的功能代码和相关状态数据，这也能叫模块化。
 
 问题也很多
 
